split up js file

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -36,8 +36,8 @@
           <a class="navbar-item" href="/contact">
             Contact
           </a>
-          <a class="navbar-item" href="/projects">
-            Projects
+          <a class="navbar-item" href="/portfolio">
+            Portfolio
           </a>
           <a class="navbar-item" href="/blog">
             Blog
@@ -53,7 +53,7 @@
         <div class="tile level is-child box">
           <p style="display:inline-block;">Website made by: Amanda Axelsson</p>
           <div class="level-right">
-            {{#if isLoggedIn}}
+            {{#if session.isLoggedIn}}
               <a class="button navbar-color" href="/logout">
                 Log out
               </a>
