--- a/views/post.hbs
+++ b/views/post.hbs
@@ -18,7 +18,7 @@
                         </div>
                         <div class="buttons is-right">
                             <div class="control">
-                                <input class="button is-primary is-info" type="submit" value="Post!">
+                                <input class="button navbar-color" type="submit" value="Post!">
                             </div>
                         </div>
                     </div>
