--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -3,47 +3,49 @@
         <div class="tile is-parent">
             <div class="tile is-child has-text-centered box">
                 <h1 class="big-header">Blogposts</h1>
-                {{#if isLoggedIn}}
-                <a class="button navbar-color" href="/post">
+                {{#if session.isLoggedIn}}
+                <a class="button navbar-color" href="/blog/new">
                     New Blogpost
                 </a>
                 {{/if}}
+                
             </div>
         </div>
     </div>
     <div class="tile is-ancestor navbar-color is-vertical">
         {{#each blogposts}}
-        <div class="tile is-parent is-vertical box">
-            <span class="tile is-child is-size-3 has-text-centered has-text-weight-bold">
-                <a href="/blog/{{id}}">{{title}}</a>
-                {{#if ../isLoggedIn}}
-                <button type="submit" class="button" data-toggle="modal" data-target="#myModal">...</button>
-                <div class="modal" id="myModal">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <button type="button" class="button close" data-dismiss="modal">&times;</button>
-                            </div>
-                            <div class="modal-body">
-                                <button type="submit" class="button">
-                                    Edit
-                                    <form action="/edit" method="post"></form>
-                                </button>
-                                <button type="submit" class="button">
-                                    Delete
-                                    <form action="/delete" method="post"></form>
-                                </button>
+            <div class="tile is-parent is-vertical">
+                <div class="tile is-child is-size-3 box has-text-centered">
+                    <a href="/blog/post/{{id}}" class="has-text-weight-bold">{{title}}</a>
+                    {{#if @root.session.isLoggedIn}}
+                    <button type="submit" class="button navbar-color" data-toggle="modal" data-target="#myModal">...</button>
+                    <div class="modal" id="myModal">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="button close" data-dismiss="modal">&times;</button>
+                                </div>
+                                <div class="modal-body">
+                                    <a href="/blog/post/{{id}}/edit">
+                                        <button type="submit" class="button">
+                                                Edit
+                                        </button>
+                                    </a>
+                                    <form action="" method="post">
+                                        <button type="submit" class="button">
+                                            Delete
+                                        </button>
+                                    </form>
+                                </div>
                             </div>
                         </div>
                     </div>
+                    {{/if}}
+                    <div class="tile is-child box is-size-5 has-text-centered">
+                        {{blogpost}}
+                    </div>
                 </div>
-                {{/if}}
-
-            </span>
-            <div class="tile is-child box is-size-5 has-text-centered">
-                {{blogpost}}
             </div>
-        </div>
         {{/each}}
     </div>    
 </div>
