TODO: upload files, security

--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -31,7 +31,7 @@
                                                 Edit
                                         </button>
                                     </a>
-                                    <form action="" method="post">
+                                    <form action="/blog/post/{{id}}/delete" method="post">
                                         <button type="submit" class="button">
                                             Delete
                                         </button>
