--- a/views/portfolio.hbs
+++ b/views/portfolio.hbs
@@ -1,4 +1,4 @@
-<div id="projects">
+<div id="portfolio">
     <div class="tile is-ancestor is-vertical navbar-color">
         <div class="tile is-parent">
             <div class="tile is-child box">
