--- a/views/home.hbs
+++ b/views/home.hbs
@@ -30,7 +30,7 @@
             </div>
             <div class="tile is-child box">
                 <div class="is-size-3 font-color has-text-centered has-text-weight-bold">
-                    <a href="/blog/{{blogpost.id}}">{{blogpost.title}}</a>
+                    <a href="/blog/post/{{blogpost.id}}">{{blogpost.title}}</a>
                 </div>
                 <div class="box is-size-5 has-text-centered">
                     {{blogpost.blogpost}}
