--- a/views/portfolio.hbs
+++ b/views/portfolio.hbs
@@ -5,7 +5,7 @@
                 <h1 class="big-header has-text-centered">Portfolio</h1>
                 {{#if session.isLoggedIn}}
                     <div>
-                        <a href="/portfolio/project/new">
+                        <a href="/projects/project/post">
                             <div class="buttons is-right is-focused">
                                 <button class="button navbar-color">New Project</button>
                             </div>
