--- a/public/style.css
+++ b/public/style.css
@@ -42,45 +42,6 @@ a.navbar-item:hover, a.navbar-item.is-active,
     color: white;
 }
 
-.modal{
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-.modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 25%; /* Could be more or less, depending on screen size */
-}
-
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 1.24rem;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.name{
-    margin-right: auto;
-}
-
 .big-header{
     font-size: 200%;
 }
@@ -92,6 +53,11 @@ a.navbar-item:hover, a.navbar-item.is-active,
 .font-color{
     color: rgb(56, 56, 56);
 }
+
+.buttons-same-height{
+    
+}
+
 a{
     color: rgb(97, 97, 97);
     font: bold;
