--- a/views/login.hbs
+++ b/views/login.hbs
@@ -27,7 +27,7 @@
                         </div>
 
                         <div class="buttons is-right">
-                            <button class="button is-dark is-focused">Login</button>
+                            <button class="button navbar-color">Login</button>
                         </div>
                     </form>
                 </div>
