--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -19,10 +19,12 @@
                     <a href="/blog/post/{{id}}" class="has-text-weight-bold">{{title}}</a>
                     {{#if @root.session.isLoggedIn}}
                         <div class="buttons is-right">
-                            <a class="button navbar-color buttons-same-height" href="/blog/post/{{id}}/edit">Edit</a>
-                            <form action="/blog/post/{{id}}/delete" method="post">
-                                <input type="submit" class="button navbar-color buttons-same-height" value="Delete">
-                            </form>
+                            <a class="button navbar-color" href="/blog/post/{{id}}/edit">Edit</a>
+                            <div class="buttons-same-height">
+                                <form action="/blog/post/{{id}}/delete" method="post">
+                                    <input type="submit" class="button navbar-color" value="Delete">
+                                </form>
+                            </div>
                         </div>
                     {{/if}}
                     <div class="tile is-child box is-size-5 has-text-centered">
