--- a/views/editpost.hbs
+++ b/views/editpost.hbs
@@ -1,4 +1,4 @@
-<div id="editpost">
+<div id="editPost">
     <div class="tile is-ancestor navbar-color is-vertical">
         <div class="tile is-parent">
             <div class="tile is-child box">
