--- a/views/newProject.hbs
+++ b/views/newProject.hbs
@@ -1,15 +1,15 @@
-<div id="editProject">
+<div id="newProject">
     <div class="tile is-ancestor navbar-color">
         <div class="tile is-parent">
             <div class="tile is-child box">
-                <h1 class="big-header has-text-centered">Edit Project</h1>
+                <h1 class="big-header has-text-centered">New Project</h1>
             </div>
         </div>
     </div>
     <div class="tile is-ancestor navbar-color">
         <div class="tile is-parent is-1">
         </div>
-        <div class="tile is-parent box center">
+        <div class="tile is-parent is-vertical box center">
             <form method="POST" action="" >
                 <h2 class="bigger-font">Title:</h2>
                 <div class="tile is-child is-vertical">
