--- a/views/portfolio.hbs
+++ b/views/portfolio.hbs
@@ -4,13 +4,11 @@
             <div class="tile is-child box">
                 <h1 class="big-header has-text-centered">Portfolio</h1>
                 {{#if session.isLoggedIn}}
-                    <div>
-                        <a href="/projects/project/post">
-                            <div class="buttons is-right is-focused">
-                                <button class="button navbar-color">New Project</button>
-                            </div>
-                        </a>
-                    </div>
+                    <a href="portfolio/post">
+                        <div class="buttons is-right is-focused">
+                            <button class="button navbar-color">New Project</button>
+                        </div>
+                    </a>
                 {{/if}}
             </div>
         </div>
